# granola-extractor

./: .gitignore  CLAUDE.md  README.md  extract_granola_transcripts.py  plugin.json  pyproject.toml
.github/workflows/: tests.yml
skills/extract-transcripts/: SKILL.md
skills/extract-transcripts/scripts/: extract_transcripts.py
tests/: __init__.py  test_extract_transcripts.py
